--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class = 'jumbotron'>
         <h1>What is this?</h1>
         <p class = 'lead'>This is a proof-of-concept game where you can <a href = 'https://cs.uwaterloo.ca/~alopez-o/math-faq/node73.html'>'guess'</a> the day of week for a given date. Click the big blue button below to get started!</p>
-        <a class = 'btn btn-lg btn-primary' href = './play.html'>Start playing! ⏵</a>
+        <a class = 'btn btn-lg btn-primary' href = './play.html'>Start playing! &#9205;</a>
       </div>
 
       <div class = 'jumbotron'>
