Add source link

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <div class = 'row text-center bg-info p-5 mb-5'>
       <a href = './index.html' style = 'text-decoration: none; color: #fff;'><h1>The Date Game</h1></a>
+      <a href = 'https://github.com/MCMi460/date-game/'>Source code here</a>
     </div>
 
     <div class = 'container g-0'>
