Add retry button for convenience

--- a/play.html
+++ b/play.html
@@ -42,6 +42,7 @@
           <a class = 'col-3 m-3 btn btn-lg text-white' href = 'javascript:match(5)' style = 'background-color: #d63384;'>Friday</a>
           <a class = 'col-3 m-3 btn btn-lg text-white' href = 'javascript:match(6)' style = 'background-color: #59359a;'>Saturday</a>
         </div>
+        <a class = 'btn btn-lg btn-primary' href = 'javascript:location.reload();'>Retry</a>
       </div>
     </div>
 
