--- a/index.html
+++ b/index.html
@@ -34,7 +34,18 @@
       <div class = 'jumbotron'>
         <h1>What is this?</h1>
         <p class = 'lead'>This is a proof-of-concept game where you can <a href = 'https://cs.uwaterloo.ca/~alopez-o/math-faq/node73.html'>'guess'</a> the day of week for a given date. Click the big blue button below to get started!</p>
-        <a class = 'btn btn-lg btn-primary' href = './play.html'>Start playing! &#9205;</a>
+        <div class = 'row g-0'>
+          <div class = 'col-lg-3 col-sm-6'>
+            <a class = 'btn btn-lg btn-primary' href = 'javascript:play();'>Start playing! &#9205;</a>
+          </div>
+          <div class = 'col-4'>
+            <select class = 'form-select' aria-label = 'Game Mode' id = 'game-mode' autocomplete = 'off'>
+              <option value = 'Standard' selected>Standard</option>
+              <option value = 'Blitz'>Blitz</option>
+              <option value = 'Verify'>Verify</option>
+            </select>
+          </div>
+        </div>
       </div>
 
       <div class = 'jumbotron'>
